fix overflow issue

--- a/source/css/pages/_index.css.sass
+++ b/source/css/pages/_index.css.sass
@@ -499,7 +499,6 @@ button::-moz-focus-inner
       font-size: $fz-s
       +breakpoint($b-mobile)
         height: 190px
-        overflow: scroll
       p:last-child
         margin: 0
       +breakpoint($b-pad)
